fix: guard PRIMARY_OWNER change by ownership, not assignment