@@ -26,8 +26,11 @@ import io.gravitee.rest.api.model.*;
 import io.gravitee.rest.api.model.api.ApiEntity;
 import io.gravitee.rest.api.model.permissions.RoleScope;
 import io.gravitee.rest.api.model.permissions.SystemRole;
+import io.gravitee.rest.api.model.settings.ApiPrimaryOwnerMode;
 import io.gravitee.rest.api.service.MembershipService;
 import io.gravitee.rest.api.service.common.GraviteeContext;
+import io.gravitee.rest.api.service.exceptions.StillApiProductPrimaryOwnerException;
+import io.gravitee.rest.api.service.exceptions.StillPrimaryOwnerException;
 import jakarta.ws.rs.client.Entity;
 import jakarta.ws.rs.core.Response;
 import java.util.Arrays;
@@ -639,13 +642,10 @@ public class GroupMembersResourceTest extends AbstractResourceTest {
             existingRoles
         );
 
-        ApiEntity api1 = new ApiEntity();
-        api1.setId("api-1");
-        api1.setName("Test API 1");
-        ApiEntity api2 = new ApiEntity();
-        api2.setId("api-2");
-        api2.setName("Test API 2");
-        when(groupService.getApis(GraviteeContext.getExecutionContext().getEnvironmentId(), GROUP_ID)).thenReturn(List.of(api1, api2));
+        // Group is still primary owner of 2 APIs (real ownership, not just assignment).
+        doThrow(new StillPrimaryOwnerException(2, ApiPrimaryOwnerMode.GROUP))
+            .when(groupService)
+            .assertGroupIsNotPrimaryOwner(GraviteeContext.getExecutionContext(), GROUP_ID, RoleScope.API);
 
         when(
             permissionService.hasPermission(
@@ -702,15 +702,10 @@ public class GroupMembersResourceTest extends AbstractResourceTest {
             Set.of(previousApiProductRole)
         );
 
-        ApiProductEntity product1 = new ApiProductEntity();
-        product1.setId("ap-1");
-        product1.setName("Product 1");
-        ApiProductEntity product2 = new ApiProductEntity();
-        product2.setId("ap-2");
-        product2.setName("Product 2");
-        when(groupService.getApiProducts(GraviteeContext.getExecutionContext().getEnvironmentId(), GROUP_ID)).thenReturn(
-            List.of(product1, product2)
-        );
+        // Group is still primary owner of 2 API Products (real ownership, not just assignment).
+        doThrow(new StillApiProductPrimaryOwnerException(2))
+            .when(groupService)
+            .assertGroupIsNotPrimaryOwner(GraviteeContext.getExecutionContext(), GROUP_ID, RoleScope.API_PRODUCT);
 
         when(
             permissionService.hasPermission(
@@ -768,7 +763,87 @@ public class GroupMembersResourceTest extends AbstractResourceTest {
             existingRoles
         );
 
-        when(groupService.getApis(GraviteeContext.getExecutionContext().getEnvironmentId(), GROUP_ID)).thenReturn(Collections.emptyList());
+        MemberEntity memberEntity = new MemberEntity();
+        memberEntity.setId(USERNAME);
+        when(membershipService.addRoleToMemberOnReference(eq(GraviteeContext.getExecutionContext()), any(), any(), any())).thenReturn(
+            memberEntity
+        );
+
+        when(
+            permissionService.hasPermission(
+                eq(GraviteeContext.getExecutionContext()),
+                eq(ENVIRONMENT_GROUP),
+                eq("DEFAULT"),
+                eq(CREATE),
+                eq(UPDATE),
+                eq(DELETE)
+            )
+        ).thenReturn(true);
+
+        MemberRoleEntity newApiRole = new MemberRoleEntity();
+        newApiRole.setRoleScope(RoleScope.API);
+        newApiRole.setRoleName("USER");
+
+        GroupMembership groupMembership = new GroupMembership();
+        groupMembership.setId(USERNAME);
+        groupMembership.setRoles(Collections.singletonList(newApiRole));
+
+        final Response response = envTarget().request().post(Entity.json(Collections.singleton(groupMembership)));
+
+        assertEquals(HttpStatusCode.OK_200, response.getStatus());
+        verify(groupService).assertGroupIsNotPrimaryOwner(GraviteeContext.getExecutionContext(), GROUP_ID, RoleScope.API);
+        verify(membershipService, times(1)).addRoleToMemberOnReference(
+            GraviteeContext.getExecutionContext(),
+            new MembershipService.MembershipReference(MembershipReferenceType.GROUP, GROUP_ID),
+            new MembershipService.MembershipMember(USERNAME, null, MembershipMemberType.USER),
+            new MembershipService.MembershipRole(RoleScope.API, "USER")
+        );
+    }
+
+    @Test
+    public void shouldAllowChangingFromPrimaryOwnerToOtherRole_whenGroupIsAssignedToApisButDoesNotOwnThem() {
+        // Regression test for APIM-15110: the group is still assigned to (has access to) APIs it
+        // does not primary-own. The old guard used groupService.getApis(...) — which returns APIs
+        // the group is merely assigned to — and would have wrongly blocked this change.
+        reset(roleService, groupService, membershipService);
+        when(groupService.findById(GraviteeContext.getExecutionContext(), GROUP_ID)).thenReturn(mock(GroupEntity.class));
+
+        RoleEntity primaryOwnerRole = new RoleEntity();
+        primaryOwnerRole.setId("API_PRIMARY_OWNER");
+        primaryOwnerRole.setName(SystemRole.PRIMARY_OWNER.name());
+        primaryOwnerRole.setScope(RoleScope.API);
+
+        RoleEntity otherRole = new RoleEntity();
+        otherRole.setId("API_USER");
+        otherRole.setName("USER");
+        otherRole.setScope(RoleScope.API);
+
+        when(
+            roleService.findByScopeAndName(RoleScope.API, SystemRole.PRIMARY_OWNER.name(), GraviteeContext.getCurrentOrganization())
+        ).thenReturn(Optional.of(primaryOwnerRole));
+        when(roleService.findByScopeAndName(RoleScope.API, "USER", GraviteeContext.getCurrentOrganization())).thenReturn(
+            Optional.of(otherRole)
+        );
+
+        RoleEntity previousApiRole = new RoleEntity();
+        previousApiRole.setId("API_PRIMARY_OWNER");
+        previousApiRole.setName(SystemRole.PRIMARY_OWNER.name());
+        previousApiRole.setScope(RoleScope.API);
+
+        Set<RoleEntity> existingRoles = Set.of(previousApiRole);
+        when(membershipService.getRoles(MembershipReferenceType.GROUP, GROUP_ID, MembershipMemberType.USER, USERNAME)).thenReturn(
+            existingRoles
+        );
+
+        // The group is assigned to 5 APIs (has console access to them via ApiCriteria.groups(groupId))
+        // but is the real PRIMARY_OWNER of none of them.
+        ApiEntity assignedApi1 = new ApiEntity();
+        assignedApi1.setId("api-1");
+        ApiEntity assignedApi2 = new ApiEntity();
+        assignedApi2.setId("api-2");
+        when(groupService.getApis(GraviteeContext.getExecutionContext().getEnvironmentId(), GROUP_ID)).thenReturn(
+            List.of(assignedApi1, assignedApi2)
+        );
 
         MemberEntity memberEntity = new MemberEntity();
         memberEntity.setId(USERNAME);
@@ -798,7 +873,9 @@ public class GroupMembersResourceTest extends AbstractResourceTest {
         final Response response = envTarget().request().post(Entity.json(Collections.singleton(groupMembership)));
 
         assertEquals(HttpStatusCode.OK_200, response.getStatus());
-        verify(groupService).getApis(GraviteeContext.getExecutionContext().getEnvironmentId(), GROUP_ID);
+        // The fix: the resource must no longer consult assignment (getApis) to decide this.
+        verify(groupService, never()).getApis(anyString(), anyString());
+        verify(groupService).assertGroupIsNotPrimaryOwner(GraviteeContext.getExecutionContext(), GROUP_ID, RoleScope.API);
         verify(membershipService, times(1)).addRoleToMemberOnReference(
             GraviteeContext.getExecutionContext(),
             new MembershipService.MembershipReference(MembershipReferenceType.GROUP, GROUP_ID),
@@ -868,7 +945,7 @@ public class GroupMembersResourceTest extends AbstractResourceTest {
 
         assertEquals(HttpStatusCode.OK_200, response.getStatus());
 
-        verify(groupService, never()).getApis(anyString(), eq(GROUP_ID));
+        verify(groupService, never()).assertGroupIsNotPrimaryOwner(any(), eq(GROUP_ID), eq(RoleScope.API));
         verify(membershipService, times(1)).addRoleToMemberOnReference(
             GraviteeContext.getExecutionContext(),
             new MembershipService.MembershipReference(MembershipReferenceType.GROUP, GROUP_ID),
@@ -976,8 +1053,75 @@ public class GroupMembersResourceTest extends AbstractResourceTest {
             Set.of(previousApiProductRole)
         );
 
+        MemberEntity memberEntity = new MemberEntity();
+        memberEntity.setId(USERNAME);
+        when(membershipService.addRoleToMemberOnReference(eq(GraviteeContext.getExecutionContext()), any(), any(), any())).thenReturn(
+            memberEntity
+        );
+
+        when(
+            permissionService.hasPermission(
+                eq(GraviteeContext.getExecutionContext()),
+                eq(ENVIRONMENT_GROUP),
+                eq("DEFAULT"),
+                eq(CREATE),
+                eq(UPDATE),
+                eq(DELETE)
+            )
+        ).thenReturn(true);
+
+        MemberRoleEntity newApiProductRole = new MemberRoleEntity();
+        newApiProductRole.setRoleScope(RoleScope.API_PRODUCT);
+        newApiProductRole.setRoleName("USER");
+
+        GroupMembership groupMembership = new GroupMembership();
+        groupMembership.setId(USERNAME);
+        groupMembership.setRoles(Collections.singletonList(newApiProductRole));
+
+        final Response response = envTarget().request().post(Entity.json(Collections.singleton(groupMembership)));
+
+        assertEquals(HttpStatusCode.OK_200, response.getStatus());
+        verify(groupService).updateApiProductPrimaryOwner(GROUP_ID, null);
+        verify(groupService).assertGroupIsNotPrimaryOwner(GraviteeContext.getExecutionContext(), GROUP_ID, RoleScope.API_PRODUCT);
+    }
+
+    @Test
+    public void shouldAllowChangingFromPrimaryOwnerToOtherRole_whenGroupIsAssignedToApiProductsButDoesNotOwnThem() {
+        reset(roleService, groupService, membershipService);
+        when(groupService.findById(GraviteeContext.getExecutionContext(), GROUP_ID)).thenReturn(mock(GroupEntity.class));
+
+        RoleEntity primaryOwnerRole = new RoleEntity();
+        primaryOwnerRole.setId("API_PRODUCT_PRIMARY_OWNER");
+        primaryOwnerRole.setName(SystemRole.PRIMARY_OWNER.name());
+        primaryOwnerRole.setScope(RoleScope.API_PRODUCT);
+
+        RoleEntity otherRole = new RoleEntity();
+        otherRole.setId("API_PRODUCT_USER");
+        otherRole.setName("USER");
+        otherRole.setScope(RoleScope.API_PRODUCT);
+
+        when(
+            roleService.findByScopeAndName(RoleScope.API_PRODUCT, SystemRole.PRIMARY_OWNER.name(), GraviteeContext.getCurrentOrganization())
+        ).thenReturn(Optional.of(primaryOwnerRole));
+        when(roleService.findByScopeAndName(RoleScope.API_PRODUCT, "USER", GraviteeContext.getCurrentOrganization())).thenReturn(
+            Optional.of(otherRole)
+        );
+
+        RoleEntity previousApiProductRole = new RoleEntity();
+        previousApiProductRole.setId("API_PRODUCT_PRIMARY_OWNER");
+        previousApiProductRole.setName(SystemRole.PRIMARY_OWNER.name());
+        previousApiProductRole.setScope(RoleScope.API_PRODUCT);
+
+        when(membershipService.getRoles(MembershipReferenceType.GROUP, GROUP_ID, MembershipMemberType.USER, USERNAME)).thenReturn(
+            Set.of(previousApiProductRole)
+        );
+
+        ApiProductEntity assignedProduct1 = new ApiProductEntity();
+        assignedProduct1.setId("ap-1");
+        ApiProductEntity assignedProduct2 = new ApiProductEntity();
+        assignedProduct2.setId("ap-2");
         when(groupService.getApiProducts(GraviteeContext.getExecutionContext().getEnvironmentId(), GROUP_ID)).thenReturn(
-            Collections.emptyList()
+            List.of(assignedProduct1, assignedProduct2)
         );
 
         MemberEntity memberEntity = new MemberEntity();
@@ -1008,6 +1152,8 @@ public class GroupMembersResourceTest extends AbstractResourceTest {
         final Response response = envTarget().request().post(Entity.json(Collections.singleton(groupMembership)));
 
         assertEquals(HttpStatusCode.OK_200, response.getStatus());
+        verify(groupService, never()).getApiProducts(anyString(), anyString());
+        verify(groupService).assertGroupIsNotPrimaryOwner(GraviteeContext.getExecutionContext(), GROUP_ID, RoleScope.API_PRODUCT);
         verify(groupService).updateApiProductPrimaryOwner(GROUP_ID, null);
         verify(membershipService, times(1)).addRoleToMemberOnReference(
             GraviteeContext.getExecutionContext(),
